<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clusterSelectMessage">Please select your cluster</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="imageUrl">Image Url</string>
    <string name="quantity">Quantity</string>
    <string name="grocerySearchMessage">Search for existing grocery</string>
    <string name="newGroceryButton">New</string>
    <string name="groceriesTitle">Groceries</string>
    <string name="applyChangesButton">Apply change(s)</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="shoppingLists">Shopping lists</string>
</resources>
